# agents

./: README.md  compliance_report.md  compliance_report_status.json  document_analyzer_report.md  logistic_compliance_report.md  pyproject.toml  technical_validator_report.md
documents/: logistic.docx  logistic.txt
knowledge/: compliance_knowledge_base.txt
src/regulatory_compliance/: main.py
src/regulatory_compliance/crews/document_analyzer/: document_analyze_crew.py
src/regulatory_compliance/crews/document_analyzer/config/: agents.yaml  tasks.yaml
src/regulatory_compliance/crews/logistic_compliant/: logistic_compliant_crew.py
src/regulatory_compliance/crews/logistic_compliant/config/: agents.yaml  tasks.yaml
src/regulatory_compliance/crews/report_generator/: report_generator_crew.py
src/regulatory_compliance/crews/report_generator/config/: agents.yaml  tasks.yaml
src/regulatory_compliance/crews/technical_validator/: technical_validator_crew.py
src/regulatory_compliance/crews/technical_validator/config/: agents.yaml  tasks.yaml
