[project]
name = "regulatory_compliance"
version = "0.1.0"
description = "regulatory_compliance using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "PyPDF2",
    "python-docx",
    "pandas",
    "openpyxl",
    "PyMuPDF"

]

[project.scripts]
kickoff = "regulatory_compliance.main:kickoff"
plot = "regulatory_compliance.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
